--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	android:id = "@+id/activity_main"
+<layout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	android:paddingBottom = "@dimen/activity_vertical_margin"
-	android:paddingLeft = "@dimen/activity_horizontal_margin"
-	android:paddingRight = "@dimen/activity_horizontal_margin"
-	android:paddingTop = "@dimen/activity_vertical_margin"
-	tools:context = "app.boxresin.runninghealthapp.MainActivity">
+	xmlns:tools = "http://schemas.android.com/tools">
 
-	<TextView
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		android:text = "Hello World!"/>
-</RelativeLayout>
+	<RelativeLayout
+		android:id = "@+id/activity_main"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		tools:context = "app.boxresin.runninghealthapp.MainActivity">
+
+		<!-- 맵뷰가 들어갈 자리 -->
+		<FrameLayout
+			android:id = "@+id/map_view_parent"
+			android:layout_width = "match_parent"
+			android:layout_height = "match_parent"/>
+	</RelativeLayout>
+</layout>
