내비게이션 드로어 UI 완성

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -3,20 +3,17 @@
 
 	<group android:checkableBehavior = "single">
 		<item
-			android:id = "@+id/nav_camera"
-			android:title = "Import"/>
+			android:id = "@+id/nav_main"
+			android:title = "지도"/>
 		<item
-			android:id = "@+id/nav_gallery"
-			android:title = "Gallery"/>
+			android:id = "@+id/nav_record"
+			android:title = "기록"/>
 		<item
-			android:id = "@+id/nav_slideshow"
-			android:title = "Slideshow"/>
-		<item
-			android:id = "@+id/nav_manage"
-			android:title = "Tools"/>
+			android:id = "@+id/nav_setting"
+			android:title = "설정"/>
 	</group>
 
-	<item android:title = "Communicate">
+<!--	<item android:title = "Communicate">
 		<menu>
 			<item
 				android:id = "@+id/nav_share"
@@ -25,6 +22,6 @@
 				android:id = "@+id/nav_send"
 				android:title = "Send"/>
 		</menu>
-	</item>
+	</item>-->
 
 </menu>
