--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,8 +3,8 @@
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
-	android:layout_height = "200dp"
-	android:background = "#80FF00"
+	android:layout_height = "180dp"
+	android:background = "@color/colorPrimaryDark"
 	android:gravity = "bottom"
 	android:orientation = "vertical"
 	android:paddingBottom = "@dimen/activity_vertical_margin"
@@ -24,13 +24,13 @@
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		android:paddingTop = "10dp"
-		android:text = "Android Studio"
+		android:text = "신규 사용자"
 		android:textAppearance = "@style/TextAppearance.AppCompat.Body1"/>
 
 	<TextView
 		android:id = "@+id/textView"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
-		android:text = "android.studio@android.com"/>
+		android:text = "180 ㎝, 73 ㎏"/>
 
 </LinearLayout>
