Welcome 액티비티 화면에 ViewPager 추가함

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,6 +123,7 @@
 			android:layout_gravity = "start"
 			android:fitsSystemWindows = "true"
 			app:headerLayout = "@layout/nav_header"
-			app:menu = "@menu/nav_drawer"/>
+			app:menu = "@menu/nav_drawer"
+			tools:visibility = "visible"/>
 	</android.support.v4.widget.DrawerLayout>
 </layout>
