--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,10 @@
 		<item name = "android:textColorSecondary">@android:color/white</item>
 		<item name = "actionMenuTextColor">@android:color/white</item>
 	</style>
+
+	<style name = "AppTheme.AppBarOverlay"
+	       parent = "ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+	<style name = "AppTheme.PopupOverlay"
+	       parent = "ThemeOverlay.AppCompat.Light"/>
 </resources>
