WelcomeActivity UI 부분만 완성

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,22 +4,42 @@
 	xmlns:tools = "http://schemas.android.com/tools"
 	tools:context = "app.boxresin.runninghealthapp.WelcomeActivity">
 
-	<LinearLayout
+	<FrameLayout
 		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		android:fitsSystemWindows = "true"
-		android:gravity = "center"
-		android:orientation = "vertical">
+		android:layout_height = "match_parent">
 
-		<android.support.v4.view.ViewPager
-			android:id = "@+id/view_pager"
+		<RelativeLayout
 			android:layout_width = "match_parent"
-			android:layout_height = "300dp"
-			android:layout_marginBottom = "20dp"/>
+			android:layout_height = "match_parent"
+			android:orientation = "vertical">
 
-		<com.viewpagerindicator.CirclePageIndicator
-			android:id = "@+id/test"
-			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"/>
-	</LinearLayout>
+			<LinearLayout
+				android:layout_width = "match_parent"
+				android:layout_height = "wrap_content"
+				android:layout_centerVertical = "true"
+				android:orientation = "vertical">
+
+				<android.support.v4.view.ViewPager
+					android:id = "@+id/view_pager"
+					android:layout_width = "match_parent"
+					android:layout_height = "300dp"
+					android:layout_marginBottom = "20dp"/>
+
+				<com.viewpagerindicator.CirclePageIndicator
+					android:id = "@+id/test"
+					android:layout_width = "match_parent"
+					android:layout_height = "wrap_content"/>
+			</LinearLayout>
+		</RelativeLayout>
+
+		<Button
+			android:id = "@+id/button"
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			android:layout_gravity = "bottom|center_horizontal"
+			android:layout_marginBottom = "50dp"
+			android:text = "시작하기"
+			android:visibility = "gone"
+			tools:visibility = "visible"/>
+	</FrameLayout>
 </layout>
