--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -26,14 +26,14 @@
 					android:layout_marginBottom = "20dp"/>
 
 				<com.viewpagerindicator.CirclePageIndicator
-					android:id = "@+id/test"
+					android:id = "@+id/pager_indicator"
 					android:layout_width = "match_parent"
 					android:layout_height = "wrap_content"/>
 			</LinearLayout>
 		</RelativeLayout>
 
 		<Button
-			android:id = "@+id/button"
+			android:id = "@+id/btn_start"
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
 			android:layout_gravity = "bottom|center_horizontal"
