--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -38,6 +38,7 @@
 			android:layout_height = "wrap_content"
 			android:layout_gravity = "bottom|center_horizontal"
 			android:layout_marginBottom = "50dp"
+			android:onClick = "onClick"
 			android:text = "시작하기"
 			android:visibility = "gone"
 			tools:visibility = "visible"/>
