--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,18 @@
 		<item name = "actionMenuTextColor">@android:color/white</item>
 	</style>
 
+	<!-- 버튼 스타일 -->
+	<style name = "GrayButtonStyle">
+		<item name = "android:background">@drawable/btn_square_flat</item>
+	</style>
+
+	<!-- 이미지 버튼 스타일 -->
+	<style name = "ImageButtonStyle" parent = "GrayButtonStyle">
+		<item name = "android:padding">10dp</item>
+		<item name = "android:scaleType">fitXY</item>
+		<item name = "android:cropToPadding">true</item>
+	</style>
+
 	<style name = "AppTheme.AppBarOverlay"
 	       parent = "ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
