메인 액티비티 <-> 설정 액티비티간 이동 완성

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -9,11 +9,11 @@
 		<item
 			android:id = "@+id/nav_record"
 			android:icon = "@drawable/ic_graph_black"
-			android:title = "기록 화면"/>
+			android:title = "기록"/>
 		<item
 			android:id = "@+id/nav_setting"
 			android:icon = "@drawable/ic_settings_black"
-			android:title = "설정 화면"/>
+			android:title = "설정"/>
 	</group>
 
 	<!--	<item android:title = "Communicate">
