--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
 		android:fitsSystemWindows = "true"
-		tools:openDrawer = "start">
+		tools:openDrawer = "end">
 
 		<LinearLayout
 			android:layout_width = "match_parent"
@@ -115,14 +115,7 @@
 			</RelativeLayout>
 		</LinearLayout>
 
-		<android.support.design.widget.NavigationView
-			android:id = "@+id/nav_view"
-			android:layout_width = "wrap_content"
-			android:layout_height = "match_parent"
-			android:layout_gravity = "start"
-			android:fitsSystemWindows = "true"
-			app:headerLayout = "@layout/nav_header"
-			app:menu = "@menu/nav_drawer"
-			tools:visibility = "gone"/>
+		<!-- 내비게이션 목록 뷰 -->
+		<include layout = "@layout/nav_view"/>
 	</android.support.v4.widget.DrawerLayout>
 </layout>
