--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- 내비게이션 헤더 뷰 -->
 <LinearLayout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
@@ -32,5 +32,4 @@
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:text = "180 ㎝, 73 ㎏"/>
-
 </LinearLayout>
