--- a/app/src/main/res/layout/nav_view.xml
+++ b/app/src/main/res/layout/nav_view.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- 내비게이션 뷰 -->
 <android.support.design.widget.NavigationView
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	xmlns:android = "http://schemas.android.com/apk/res/android"
