--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,3 +1,4 @@
+<!-- 툴바 레이아웃 -->
 <android.support.design.widget.AppBarLayout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	android:layout_width = "match_parent"
