프래그먼트 전환할 때 다음지도가 검게 나오는 문제 해결

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,20 @@
 			<FrameLayout
 				android:id = "@+id/fragment_parent"
 				android:layout_width = "match_parent"
-				android:layout_height = "match_parent"/>
+				android:layout_height = "match_parent">
 
+				<fragment
+					android:id="@+id/fragment_setting"
+					android:layout_width = "match_parent"
+					android:layout_height = "match_parent"
+					android:name = "app.boxresin.runninghealthapp.SettingFragment"/>
+
+				<fragment
+					android:id="@+id/fragment_map"
+					android:layout_width = "match_parent"
+					android:layout_height = "match_parent"
+					android:name = "app.boxresin.runninghealthapp.MapFragment"/>
+			</FrameLayout>
 		</LinearLayout>
 
 		<!-- 내비게이션 목록 뷰 -->
