--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -6,20 +6,17 @@
 	<LinearLayout
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
-		android:layout_marginTop = "5dp"
 		android:gravity = "center"
 		android:orientation = "vertical"
-		android:paddingBottom = "@dimen/activity_vertical_margin"
 		android:paddingLeft = "@dimen/activity_horizontal_margin"
-		android:paddingRight = "@dimen/activity_horizontal_margin"
-		android:paddingTop = "@dimen/activity_vertical_margin">
+		android:paddingRight = "@dimen/activity_horizontal_margin">
 
 		<TextView
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
 			android:layout_gravity = "center"
 			android:layout_marginTop = "5dp"
-			android:text = "변경하고자 하는 성별를 선택해주세요"/>
+			android:text = "성별 수정"/>
 
 		<RadioGroup
 			android:layout_width = "match_parent"
@@ -42,15 +39,14 @@
 				android:layout_height = "wrap_content"
 				android:layout_marginLeft = "25dp"
 				android:text = "여자"/>
-
 		</RadioGroup>
 
 		<TextView
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
 			android:layout_gravity = "center"
-			android:layout_marginTop = "50dp"
-			android:text = "변경하고자 하는 몸높이를 입력해주세요"/>
+			android:layout_marginTop = "70dp"
+			android:text = "신체 정보 수정"/>
 
 		<EditText
 			android:layout_width = "200dp"
@@ -58,7 +54,17 @@
 			android:layout_gravity = "center"
 			android:layout_marginTop = "5dp"
 			android:gravity = "right"
-			android:hint = "cm"
+			android:hint = "㎝"
+			android:inputType = "number"
+			android:text = ""/>
+
+		<EditText
+			android:layout_width = "200dp"
+			android:layout_height = "wrap_content"
+			android:layout_gravity = "center"
+			android:layout_marginTop = "5dp"
+			android:gravity = "right"
+			android:hint = "㎏"
 			android:inputType = "number"
 			android:text = ""/>
 
@@ -67,47 +73,37 @@
 			android:layout_height = "wrap_content"
 			android:layout_gravity = "center"
 			android:layout_marginTop = "50dp"
-			android:text = "변경하고자 하는 몸무게를 입력해주세요"/>
-
-		<EditText
-			android:layout_width = "200dp"
-			android:layout_height = "wrap_content"
-			android:layout_gravity = "center"
-			android:layout_marginTop = "5dp"
-			android:gravity = "right"
-			android:hint = "kg"
-			android:inputType = "number"
-			android:text = ""/>
-
-		<TextView
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:layout_gravity = "center"
-			android:layout_marginTop = "50dp"
-			android:text = "변경하고자 하는 지도 타입을 선택해주세요"/>
+			android:text = "지도 표시 형식 선택"/>
 
 		<RadioGroup
+			android:id = "@+id/radio_map_type"
 			android:layout_width = "match_parent"
 			android:layout_height = "wrap_content"
 			android:layout_marginBottom = "20dp"
 			android:layout_marginTop = "5dp"
-			android:checkedButton = "@+id/btn_sky_view"
+			android:checkedButton = "@+id/btn_standard_map"
 			android:gravity = "center"
 			android:orientation = "horizontal">
 
 			<RadioButton
-				android:id = "@+id/btn_street_view"
+				android:id = "@+id/btn_standard_map"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
-				android:layout_marginRight = "25dp"
-				android:text = "지도"/>
+				android:layout_marginRight = "20dp"
+				android:text = "약도 형식"/>
 
 			<RadioButton
-				android:id = "@id/btn_sky_view"
+				android:id = "@+id/btn_satellite_map"
 				android:layout_width = "wrap_content"
 				android:layout_height = "wrap_content"
-				android:layout_marginLeft = "25dp"
-				android:text = "스카이뷰"/>
+				android:text = "위성 사진"/>
+
+			<RadioButton
+				android:id = "@+id/btn_hybrid_map"
+				android:layout_width = "wrap_content"
+				android:layout_height = "wrap_content"
+				android:layout_marginLeft = "20dp"
+				android:text = "혼합형"/>
 		</RadioGroup>
 	</LinearLayout>
 </layout>
