--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -10,11 +10,16 @@
 			android:id = "@+id/nav_record"
 			android:icon = "@drawable/ic_graph_black"
 			android:title = "기록"/>
-		<item
-			android:id = "@+id/nav_setting"
-			android:icon = "@drawable/ic_settings_black"
-			android:title = "설정"/>
 	</group>
+
+	<item android:title = "기타">
+		<menu>
+			<item
+				android:id = "@+id/nav_setting"
+				android:icon = "@drawable/ic_settings_black"
+				android:title = "설정"/>
+		</menu>
+	</item>
 
 	<!--	<item android:title = "Communicate">
 			<menu>
@@ -26,5 +31,4 @@
 					android:title = "Send"/>
 			</menu>
 		</item>-->
-
 </menu>
