--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,7 @@
 			<FrameLayout
 				android:id = "@+id/fragment_parent"
 				android:layout_width = "match_parent"
-				android:layout_height = "match_parent">
-
-				<fragment
-					android:id="@+id/fragment_map"
-					android:layout_width = "match_parent"
-					android:layout_height = "match_parent"
-					android:name = "app.boxresin.runninghealthapp.MapFragment"/>
-			</FrameLayout>
+				android:layout_height = "match_parent"/>
 		</LinearLayout>
 
 		<!-- 내비게이션 목록 뷰 -->
