--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,6 +10,7 @@
 		xmlns:app = "http://schemas.android.com/apk/res-auto"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
+		android:background="@color/colorPrimary"
 		app:popupTheme = "@style/Theme.AppCompat.Light"
 		app:theme = "@style/ToolBarStyle"/>
 </android.support.design.widget.AppBarLayout>
