카메라 팝업 뷰 기본틀 구현. (드래그까지만)

--- a/app/src/main/res/menu/fragment_map.xml
+++ b/app/src/main/res/menu/fragment_map.xml
@@ -11,4 +11,12 @@
 	<item
 		android:id="@+id/action_save_record"
 		android:title = "기록 저장"/>
+
+	<item
+		android:id="@+id/action_remove_loadrd_lines"
+		android:title = "불러온 이동궤적 삭제"/>
+
+	<item
+		android:id="@+id/action_camera"
+		android:title = "카메라"/>
 </menu>
