--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -2,8 +2,18 @@
 <layout
 	xmlns:android = "http://schemas.android.com/apk/res/android">
 
-	<ListView
-		android:id = "@+id/list_record"
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"/>
+	<FrameLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+
+		<ListView
+			android:id = "@+id/list_record"
+			android:layout_width = "match_parent"
+			android:layout_height = "match_parent"/>
+
+		<view.CameraSurface
+			android:id = "@+id/camera_view"
+			android:layout_width = "120dp"
+			android:layout_height = "170dp"/>
+	</FrameLayout>
 </layout>
