--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -102,6 +102,15 @@
 		<FrameLayout
 			android:id = "@+id/for_touchevent"
 			android:layout_width = "120dp"
-			android:layout_height = "170dp"/>
+			android:layout_height = "210dp">
+
+			<ImageButton
+				android:id = "@+id/btn_take_photo"
+				style = "@style/GrayButtonStyle"
+				android:layout_width = "match_parent"
+				android:layout_height = "40dp"
+				android:layout_gravity = "bottom"
+				android:src = "@android:drawable/ic_menu_camera"/>
+		</FrameLayout>
 	</RelativeLayout>
 </layout>
