--- a/app/src/main/res/menu/fragment_map.xml
+++ b/app/src/main/res/menu/fragment_map.xml
@@ -13,6 +13,10 @@
 		android:title = "기록 저장"/>
 
 	<item
+		android:id = "@+id/action_clear_record"
+		android:title = "기록 초기화"/>
+
+	<item
 		android:id = "@+id/action_remove_loadrd_lines"
 		android:title = "불러온 이동궤적 삭제"/>
 
